# velq

./: .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  biome.json  newprivacy.html  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: agent.rs  app.rs  bundle.rs  export.rs  mod.rs  render.rs  search.rs  vault.rs  vcs.rs  velq.rs  watch.rs
apps/desktop/src-tauri/tests/fixtures/: demo.velq
apps/desktop/src/assets/agent-icons/: LICENSE.md
apps/desktop/src/command/: Cheatsheet.tsx  CommandPalette.tsx  actions.ts  cheatsheet.css  palette.css  useShortcuts.ts
apps/desktop/src/components/: Toaster.tsx  toast.css
apps/desktop/src/design/: base.css  motion.css  tokens.css
apps/desktop/src/editor/: CodeMirror.tsx  Editor.tsx  PdfView.tsx  PreviewView.tsx  RenderedView.tsx  SplitView.tsx  editor.css  editorBus.ts  extensions.ts  imagePaste.ts  linkComplete.ts  livePreview.css  livePreview.ts  pdfView.css  scrollSync.ts  theme.ts  undoRouter.ts  useAutosave.ts
apps/desktop/src/export/: convert.ts  dropActions.ts  exporters.ts  htmlPackage.ts
apps/desktop/src/filemanager/: BatchRenameDialog.tsx  ContextMenu.tsx  FileGlyph.tsx  FileList.tsx  QuickLook.tsx  RenameInput.tsx  Tree.tsx  batchRename.css  contextmenu.css  fileDnd.drag.test.ts  fileIcon.ts  fileMenu.tsx  fileVisual.ts  filelist.css  quicklook.css  selectionClick.ts  tree.css  useFileContextMenu.tsx  useFileDnd.test.ts  useFileDnd.ts  useMarquee.ts  useSelectionKeys.ts
apps/desktop/src/history/: DiffBar.tsx  DiffView.tsx  HistoryPanel.tsx  diffTheme.ts  history.css  sessions.test.ts  sessions.ts
apps/desktop/src/i18n/: en.ts  i18n.test.ts  index.ts  ja.ts  useT.ts
apps/desktop/src/ipc/: acp.ts  app.ts  bundle.ts  dialog.ts  export.ts  index.ts  mock.ts  ogp.ts  render.ts  search.ts  tauri.ts  types.ts  vault.ts  vcs.ts  velq.ts  watch.ts
apps/desktop/src/plugins/: PluginsPanel.tsx  api.ts  pluginsPanel.css  runtime.ts
apps/desktop/src/plugins/builtin/: index.ts  katex.ts  mermaid.ts  plugins.css
apps/desktop/src/preview/: PreviewPane.tsx  elementSelect.ts  forwardShortcuts.ts  htmlTextMap.test.ts  htmlTextMap.ts  localAssets.ts  ogpCards.ts  preview.css  previewStyles.test.ts  previewStyles.ts  scriptRuntime.test.ts  scriptRuntime.ts
apps/desktop/src/shell/: ActivityBar.tsx  AgentIcon.tsx  AgentMarkdown.tsx  AgentPanel.tsx  AgentSettings.tsx  AppShell.tsx  Breadcrumb.tsx  ConflictBanner.tsx  ConvertBanner.tsx  ConvertPromptModal.tsx  EditorPane.tsx  EditorWorkspace.tsx  ExplorerView.tsx  FileListPane.tsx  GridBrowser.tsx  MillerColumns.tsx  NewDocButton.tsx  PackagingOverlay.tsx  PaneDivider.tsx  ScriptBanner.tsx  SecondPane.tsx  SelectionBar.tsx  SettingsView.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx  VelqView.tsx  activitybar.css  agent.css  convertPrompt.css  explorer.css  settings-view.css  shell.css  useFileDrop.ts
apps/desktop/src/store/: acp.ts  batchRename.ts  convertBanner.ts  convertPrompt.ts  doc.openViewer.test.ts  doc.reloadVelq.test.ts  doc.tabs.test.ts  doc.ts  files.newDoc.test.ts  files.selection.test.ts  files.ts  history.ts  htmlRuntime.ts  packaging.ts  palette.ts  session.ts  settings.ts  toast.ts  ui.ts  vault.ts
apps/desktop/src/update/: updater.ts
apps/desktop/src/util/: lineDiff.test.ts  lineDiff.ts  platform.test.ts  platform.ts  selfWrites.ts  text.test.ts  text.ts  theme.ts  time.ts
crates/velq-acp/: Cargo.toml
crates/velq-acp/src/: lib.rs
crates/velq-bundler/: Cargo.toml
crates/velq-bundler/examples/: pack_demo.rs
crates/velq-bundler/src/: lib.rs  ogp.rs
crates/velq-core/: Cargo.toml
crates/velq-core/src/: lib.rs
crates/velq-search/: Cargo.toml
crates/velq-search/src/: lib.rs
crates/velq-vcs/: Cargo.toml
crates/velq-vcs/src/: lib.rs
docs/: architecture.md  claude-integration.md  distribution.md  file-manager-ux.md  plugin-api.md  proposals.md  requirements.md  ui-ux-log.md  ui-ux-spec.md  velq-format.md
lp/: astro.config.mjs  package.json  wrangler.toml
lp/functions/: _middleware.js
lp/public/: robots.txt
lp/scripts/: make-og.sh
lp/src/components/: Developers.astro  Landing.astro
lp/src/data/: copy.ts  devCopy.ts  icons.ts
lp/src/layouts/: BaseLayout.astro
lp/src/pages/: index.astro
lp/src/pages/developers/: index.astro
lp/src/pages/ja/: index.astro
lp/src/pages/ja/developers/: index.astro
lp/src/styles/: global.css
