[package]
name = "velq-bundler"
description = "Extracts, collects and rewrites HTML dependencies into an offline .velq."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lol_html = "3.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde.workspace = true
sha2 = "0.10"
thiserror.workspace = true
url = "2"
velq-core = { path = "../velq-core" }
