[package]
name = "velq-bundler"
description = "Extracts, collects and rewrites HTML dependencies into an offline .velq."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lol_html = "3.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
sha2 = "0.11"
thiserror.workspace = true
url = "2"
velq-core = { path = "../velq-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
