[package]
name = "velq-desktop"
description = "Velq — Markdown / HTML editor with .velq packaging."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
default-run = "velq-desktop"

# The lib is what `main.rs` calls into; the cdylib/staticlib targets keep Windows happy.
[lib]
name = "velq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "webview-data-url"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
comrak = "0.52"
trash = "5"
url = "2"
base64 = "0.22"

# Desktop-only: the auto-updater (and the relaunch it triggers) are meaningless on mobile.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Local domain crates (wired in as their milestones land).
velq-core = { path = "../../../crates/velq-core" }
velq-vcs = { path = "../../../crates/velq-vcs" }
velq-bundler = { path = "../../../crates/velq-bundler" }
velq-search = { path = "../../../crates/velq-search" }
velq-acp = { path = "../../../crates/velq-acp" }
# ACP session plumbing: the mpsc channels bridging the agent session to Tauri commands/events.
futures = "0.3"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

# Native "render webview to PDF" for PDF export, per platform. Each unifies with
# the same webview stack wry already pulls in for that OS. (Windows/Linux compile
# only on their own OS — CI is their first build.) Keep these tables last so they
# don't absorb the shared dependencies above.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = "0.61"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gtk = "0.18"
